b=631978 check old icon names first for bidi icons r=roc a=blocking-betaN+